@@ -1,21 +1,0 @@
-# Copyright 1999-2007 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DBD-SQLite/DBD-SQLite-1.13.ebuild,v 1.10 2007/04/15 20:39:24 corsair Exp $
-
-inherit perl-module eutils
-
-DESCRIPTION="Self Contained RDBMS in a DBI Driver"
-HOMEPAGE="http://search.cpan.org/~msergeant/${P}/"
-SRC_URI="mirror://cpan/authors/id/M/MS/MSERGEANT/${P}.tar.gz"
-
-LICENSE="|| ( Artistic GPL-2 )"
-SLOT="0"
-KEYWORDS="~amd64-linux ~x86-linux ~x86-macos"
-IUSE=""
-SRC_TEST="do"
-
-DEPEND=">=dev-perl/DBI-1.42
-	!<dev-perl/DBD-SQLite-1
-	dev-lang/perl"
-
-myconf="USE_LOCAL_SQLITE=1"
