@@ -1,6 +1,6 @@
-DIST DBD-SQLite-1.13.tar.gz 582465 RMD160 97ec11d236a17ce6f338153b679d0ac9d718f159 SHA1 f1e82ad082e1547dd5cf1be91017929debd46ae6 SHA256 7298060b241260af0b495840aec358bd27b0b2bf2e0b6bcf1dbc0743229ee412
 DIST DBD-SQLite-1.14.tar.gz 703380 RMD160 07616d3db7de55134588fca7dff3dec5091ffc77 SHA1 68e13a5f1ba1249962930140a0b0e3b587401ab7 SHA256 44189d373a77eeb8a5353e0cd88bff04dde6e611678abdc6834c80d35d2f0d07
-EBUILD DBD-SQLite-1.13.ebuild 628 RMD160 a807eec0a98d08f32b3960a4056737c7e0faabec SHA1 32db962ecdf554f8e4996afb6fd361d91f37cb25 SHA256 a6205032e60cb97348968967ebf3ad0647ecef795031f116552861335b3208c2
+DIST DBD-SQLite-1.25.tar.gz 1102688 RMD160 f608d81c2765ec179468c96118c4ce463651181f SHA1 54a29d97c4d220b204817f1301fb7ce0f964e95c SHA256 832c1f9a73d02586a93a05415f97c28980a50323e7698af318730a076502ad9d
 EBUILD DBD-SQLite-1.14.ebuild 654 RMD160 b1f56670ad4df389ada2bc8f43e3cf159783bf01 SHA1 12e2045bd0b5cceae780007e02fea6039d4ee4c2 SHA256 0ba76ec9feffe31230e6fc55085c25f131670581bed4512f1f046d9f72128888
-MISC ChangeLog 8972 RMD160 3b5fe2842830723332cebc2cef230eab25e78ca6 SHA1 f27874c6fa1618304bb62d8cc4bfa811fde9035a SHA256 671f521dba4589aa87f31897ba8da92cef69486e2fb6f0b45c49798cd007c88f
+EBUILD DBD-SQLite-1.25.ebuild 490 RMD160 016682ff7ac6aea2abe79fb721b242732c7ba8c5 SHA1 623eab89e4b694cc223504726c3a230170e4d769 SHA256 81f56f2a4ed411950c9c5ccf6f5c99ee3e6571fd94e0a1975a38a37397f51da6
+MISC ChangeLog 9103 RMD160 0146821cef3f5eca9bbd53e87068ad68f04cbcdb SHA1 8067d7af8c55fa4fa1a98470998d728c48516f64 SHA256 c5fe11aa0a704cf8817771919c52c527b65b477f44e893a08b0aed55584c36a8
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
